--- a/services/watchdog/package.json
+++ b/services/watchdog/package.json
@@ -6,19 +6,22 @@
   "private": false,
   "author": "Juraj Zec (https://github.com/xzec)",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "invoke:local:dev": "sls invoke local -f adesaWatchdog -s dev",
-    "invoke:dev": "sls invoke -f adesaWatchdog -s dev",
-    "deploy:code:dev": "sls deploy function -f adesaWatchdog -s dev",
-    "deploy:dev": "sls deploy -s dev"
+    "build": "node esbuild.js",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
+    "@types/node-cron": "^3.0.7",
+    "esbuild": "^0.17.19",
     "eslint-config-adesa": "workspace:*",
+    "fast-glob": "^3.2.12",
     "tsconfig": "workspace:*",
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.3.1",
     "zod": "^3.21.4"
   }
